# probing_nli

./: .gitignore  activations.py  activations_generator.py  activations_loader.py  activations_manager.ipynb  common_constants.py  experiment_1.py  experiment_1_and_2.sh  experiment_2.py  experiment_3.py  experiment_common_code.py  experiment_common_code.sh  experiments_manager.ipynb  hyperparameter_tuner.py  lr_hyperparameter_tuner.py  models.py  models_loader.py  output.txt  parallel_utils.py  prek.toml  probe_cosine_similarity_experiment.py  probe_similarity_experiment.py  probe_similarity_experiment.sh  probes.py  pyproject.toml  sanity_tests.ipynb  sick.py  sick_loader.py  sick_statistics.py  significance_testing.py  test.py  testbed.ipynb  utils.py
data/hyperparameters/: hyperparameters.json  hyperparameters_old.json  hyperparameters_super_old.json
