[project]
name = "bachelor-thesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "datasets>=4.6.1",
    "flash-attn",
    "icecream>=2.1.11",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "janome>=0.5.0",
    "jaxtyping>=0.3.9",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "pandas>=3.0.1",
    "pip>=26.0.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch == 2.10.0+cu130",
    "transformers>=5.2.0",
]

[tool.uv]
index-strategy = "unsafe-best-match" 
extra-index-url = ["https://download.pytorch.org/whl/cu130"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
flash-attn = { path = "wheels/flash_attn-2.8.3-cp312-cp312-win_amd64.whl" }
